// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change the style 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: auto;
  -webkit-padding-start: var(--space-5);
  padding-inline-start: var(--space-5);
  -webkit-padding-end: var(--space-5);
  padding-inline-end: var(--space-5);
  padding-top: var(--space-5);
  padding-bottom: var(--space-5);
  box-shadow: var(--shadows-lg);
  margin-top: var(--space-5);
  margin-bottom: var(--space-5);
  border-radius: var(--radii-sm);
  font-family: var(--fonts-body);
  background-color: var(--colors-blue-200);
  color: var(--colors-blue-700);
}

<div
    class="emotion-0"
    data-chakra-component="CPseudoBox"
    data-testid="pseudobox"
  >
    Box Works
  </div>
</DocumentFragment>
`;

exports[`should display Box with type as header 1`] = `
<DocumentFragment>
  <header
    class="emotion-0"
    data-chakra-component="CPseudoBox"
    data-testid="pseudobox"
  >
    Box Works
  </header>
</DocumentFragment>
`;

exports[`should display Box with type as p 1`] = `
<DocumentFragment>
  <p
    class="emotion-0"
    data-chakra-component="CPseudoBox"
    data-testid="pseudobox"
  >
    Box Works
  </p>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
    data-chakra-component="CPseudoBox"
    data-testid="pseudobox"
  >
    Box Works
  </div>
</DocumentFragment>
`;
